Fixes to page load jumping.

--- a/src/app/movie-poll-item/movie-poll-item.component.scss
+++ b/src/app/movie-poll-item/movie-poll-item.component.scss
@@ -57,8 +57,8 @@ $posterHeight: calc(3 / 2 * $posterWidth);
     z-index: 2;
     border-radius: 6px;
     width: $posterWidth;
+    min-height: $posterHeight;
     background-size: cover;
-    background-image: url("../../assets/img/poster-placeholder.png");
   }
 
   .poster {
@@ -326,12 +326,12 @@ $posterHeight: calc(3 / 2 * $posterWidth);
     position: absolute;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
-    bottom: 0;
+    bottom: 24px;
     width: $posterWidth;
     font-size: 17px;
     padding: 0 0 4px;
     box-shadow: 1px 1px 11px 0px #0000000f;
-    background-image: linear-gradient(0deg, #484747d9 75%, transparent);
+    background-image: linear-gradient(0deg, #000000af 75%, transparent);
     background-position-y: 65px;
     background-size: calc($posterWidth + 20px) 66px;
     transition: height 0.4s ease-out, opacity 0.4s ease-in-out;
